[gd_scene load_steps=9 format=3 uid="uid://7qao3jj0h4du"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_6vd06"]
[ext_resource type="Texture2D" uid="uid://djq5p1jbe5tit" path="res://icon.svg" id="2_qu2qp"]
[ext_resource type="Script" path="res://Player/Gloves/right_glove.gd" id="3_2k27e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1vpl"]
size = Vector2(120, 120)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wxdx5"]
radius = 63.0
height = 128.0

[sub_resource type="Animation" id="Animation_q15ls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2n806"]
resource_name = "right_glove_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333, 0.266667, 0.5),
"transitions": PackedFloat32Array(1, 3.24901, 3.03143, 0.217637, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(200, 0), Vector2(230, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipwn1"]
_data = {
"RESET": SubResource("Animation_q15ls"),
"right_glove_anim": SubResource("Animation_2n806")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_6vd06")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qu2qp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n1vpl")

[node name="Right_Glove_Position" type="Node2D" parent="."]
position = Vector2(81, 135)
rotation = -0.523599
scale = Vector2(0.845, 0.845)

[node name="RightGlove" type="Sprite2D" parent="Right_Glove_Position"]
script = ExtResource("3_2k27e")

[node name="Sprite2D" type="Sprite2D" parent="Right_Glove_Position/RightGlove"]
modulate = Color(0.93986, 0, 0.1428, 1)
texture = ExtResource("2_qu2qp")

[node name="Area2D" type="Area2D" parent="Right_Glove_Position/RightGlove"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Glove_Position/RightGlove/Area2D"]
shape = SubResource("CapsuleShape2D_wxdx5")

[node name="RG_AnimationPlayer" type="AnimationPlayer" parent="Right_Glove_Position/RightGlove"]
libraries = {
"": SubResource("AnimationLibrary_ipwn1")
}

[node name="Left_Glove_Position" type="Node2D" parent="."]
position = Vector2(80, -135)
rotation = 0.523599
scale = Vector2(0.845, 0.845)

[node name="LeftGlove" type="Sprite2D" parent="Left_Glove_Position"]

[node name="Sprite2D" type="Sprite2D" parent="Left_Glove_Position/LeftGlove"]
modulate = Color(0.93986, 0, 0.1428, 1)
texture = ExtResource("2_qu2qp")

[node name="Area2D" type="Area2D" parent="Left_Glove_Position/LeftGlove"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Glove_Position/LeftGlove/Area2D"]
shape = SubResource("CapsuleShape2D_wxdx5")

[node name="LG_AnimationPlayer" type="AnimationPlayer" parent="Left_Glove_Position/LeftGlove"]
libraries = {
"": SubResource("AnimationLibrary_ipwn1")
}
